# predicoes-loterias-caixa

./: .dockerignore  .gitignore  GEMINI.md  MANIFEST.in  Makefile  README.md  Taskfile.yml  colab_runner.ipynb  docker-compose.worker.yml  ensemble_dashboard.ipynb  main.py  model_cultivation.ipynb  pyproject.toml  requirements.txt  research_results.md  run_ensemble.py  run_factory.py  snapshot_factory.ipynb  standalone_ensemble.ipynb  test.sh  walkthrough.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  update_results.yml
data/: Quina.csv  Quina.xlsx  ledger.csv
docs/: ARCHITECTURE.md  CONTAINER_WORKER.md  DISCLAIMER.md  MODEL_CULTIVATION.md  PLANNING.md  PRODUCT.md  RESEARCH_MODEL_CULTIVATION_LEGACY.md  RESEARCH_v0.3.0.md  RESEARCH_v0.4.0.md  STRATEGY.md  TECHNICAL.md  WINDOWS_SETUP.md  lottery_modalities_documentation.md  project_plan.md  roadmap.md  state_of_art_lottery_prediction.md
docs/archive/: project_plan_legacy.md
docs/research/: transformer_arch.md
scripts/: analyze_lotofacil.py  analyze_maismilionaria.py  analyze_megasena.py  analyze_quina.py  cleanup_notebooks.py  convert_xlsx_to_csv.py  get_megasena_results.py  monitor_loterias.py  research_distributions.py  restore_install_cells.py  update_megasena.py
src/: cli.py
src/cli/: main.py
src/config/: prices.json
src/core/: base.py
src/core/games/: lotofacil.py  megasena.py  quina.py
src/data/: analysis.py  features.py  filters.py  manager.py
src/judge/: backtest_ensemble.py  backtest_standard.py  ensemble.py  ledger.py  versioning.py
src/loterias/: __init__.py  backtester.py  base.py  checker.py  cli.py  config.py  ensemble_backtester.py  ensemble_predictor.py  filters.py  ledger.py  lotofacil.py  megasena.py  models.py  optimizer.py  quina.py  snapshot_manager.py  utils.py
src/loterias/models/: __init__.py  autoencoder_model.py  catboost_model.py  frequency_model.py  gap_model.py  hybrid_model.py  lstm_model.py  monte_carlo.py  random_model.py  rf_model.py  surfing_model.py  transformer_model.py  xgboost_model.py
src/models/: __init__.py
src/models/deep/: autoencoder.py  lstm.py  transformer.py
src/models/ensemble/: hybrid.py
src/models/heuristic/: frequency.py  gap.py  monte_carlo.py  (+2 more)
src/ops/: callbacks.py  inspector.py  logger.py  optimizer.py  snapshot.py  versioning.py
tests/: test_autoencoder.py  test_catboost_model.py  test_chaos.py  test_cli_flow.py  test_data_manager.py  test_filters.py  test_games_config.py  test_hybrid.py  test_inspector.py  test_ledger.py  test_logger.py  test_lstm_model.py  test_models.py  test_optimizer.py  test_rf_model.py  test_snapshot_manager_integration.py  test_snapshots.py  test_transformer_model.py  test_versioning.py
(+3 files in other folders)
