[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predicoes-loterias-caixa"
version = "0.1.0"
description = "Lottery prediction laboratory"
authors = [
    {name = "Arthur Silva", email = "arthursilva.dev@gmail.com"},
]
dependencies = [
    "requests",
    "pandas",
    "openpyxl",
    "pytest",
    "scipy",
    "tabulate",
    "scikit-learn",
    "tensorflow[and-cuda]",
    "xgboost",
    "catboost",
    "lightgbm"
]
requires-python = ">=3.11"

[project.scripts]
preloto = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]
include = ["loterias*"]

